@@ -4,6 +4,9 @@ Changelog
 Version 0.8.x
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+- Inline the _escape function, because function calls are expensive in Python.
+  [fschulze]
+
 - When templates are instantiated outside of a class-definition, a
   relative file path will be made absolute using the module path.
   [malthe]
